--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resilience4js",
   "version": "1.0.0",
   "description": "",
-  "main": "resilience4js.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/dm03514/resilience4js#readme",
   "devDependencies": {
     "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "rxjs": "^6.3.3"
   }
 }
